kubernetes/nginx-sample/test-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - sample1.vindpro.dev
    - sample2.vindpro.dev
    - proxy.vindpro.dev
    secretName: hello-kubernetes-tls
  rules:
  - host: sample1.vindpro.dev
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: sample2.vindpro.dev
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
  - host: proxy.vindpro.dev
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 80
